# Runners

./: CMakeLists.txt  README.md
src/: Stroke.cpp  Stroke.h  configurations.h  main.cpp
src/data/: Scores.json
